EXTRA_DIST = jpeg.jpg psd_mask.psd psd_no_mask.psd psd.psd tiff_deflate.tif \
	tiff_lzw.tif tiff_m0000.tif tiff_m0001.tif tiff_mask0000.tif tiff_mask0001.tif \
	tiff_m_cropped0000.tif tiff_m_cropped0001.tif tiff_none.tif \
	tiff_m_uncropped0000.tif tiff_m_uncropped0001.tif

MAINTAINERCLEANFILES = \
	Makefile.in

all:
check: test
test:
verify:
clean:
